[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "corax"
authors = [{ name = "Yicheng Luo", email = "ethanluoyc@gmail.com" }]
requires-python = ">=3.9,<3.11"
dependencies = ["absl-py", "dm-env", "numpy", "dm-tree"]
dynamic = ["version"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: Implementation :: CPython",
]

[tool.pdm.version]
source = "scm"

[tool.pdm.build]
excludes = ["**/*_test.py", "**/dummy_data"]

[project.optional-dependencies]
tf = [
  "tensorflow-cpu~=2.14.0",
  "tensorflow-probability~=0.22.1",
  "tensorflow-datasets>=4.9.3",
  "dm-reverb~=0.13.0",
  "rlds",
]
jax = [
  "tensorflow-probability",
  "jax",
  "jaxlib",
  "dm-haiku",
  "flax",
  "optax",
  "rlax",
  "chex",
  "dm_env_wrappers",
]

[tool.ruff]
line-length = 88
exclude = ["third_party", ".venv"]

[tool.ruff.lint]
ignore = ["E731", "E501"]
select = [
  "E", # pycodestyle
  "F", # pyflakes
  "I", # isort
]
[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["corax", "baselines"]
force-single-line = true
force-sort-within-sections = true
single-line-exclusions = ["typing"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.pyright]
include = ["corax"]
exclude = ["**/node_modules", "**/__pycache__"]
ignore = [
  "corax/adders",
  "corax/datasets/tfds",
  "corax/agents/jax/actor_core.py", # chex dataclass
  "corax/**/*_test.py" # skip tests
]

reportMissingImports = true
reportMissingTypeStubs = false
reportIncompatibleMethodOverride = false

pythonVersion = "3.10"
pythonPlatform = "Linux"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["corax"]
filterwarnings = [
  # Warnings generated by third_party dependencies
  "ignore::DeprecationWarning:haiku.*:",
  "ignore::DeprecationWarning:flax.*:",
  "ignore::DeprecationWarning:wandb.*:",
  "ignore::DeprecationWarning:reverb.*:",
  "ignore::DeprecationWarning:tensorflow.*:",
  "ignore::DeprecationWarning:pkg_resources.*:",
  "ignore::DeprecationWarning:ott.*:",
  "ignore::DeprecationWarning:gymnasium.*:",
  "ignore::UserWarning:gym.envs.registration:",
]
