[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "baselines"
version = "0.1.0"
authors = [{ name = "Yicheng Luo", email = "ethanluoyc@gmail.com" }]
requires-python = ">=3.9"
dependencies = [
    "jax",
    "ml-collections",
    "absl-py>=0.12.0",
    "numpy",
    "gym>=0.21.0,<0.24.0",
    "d4rl @ git+https://github.com/Farama-Foundation/d4rl@71a9549#egg=d4rl",
    "mujoco_py @ git+https://github.com/ethanluoyc/mujoco-py@v2.1.2.14-patch",
    "dm-control",
    "gymnasium",
    "wandb",
    "tensorflow-cpu",
    "tensorflow-probability",
    "tensorflow-datasets",
    "dm-reverb",
    "rlds",
    "dm-haiku",
    "flax",
    "optax",
    "rlax",
    "chex",
    "dm_env_wrappers",
    "absl-py",
    "dm-env",
]
