[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "baselines"
version = "0.1.0"
authors = [{ name = "Yicheng Luo", email = "ethanluoyc@gmail.com" }]
requires-python = ">=3.9"
dependencies = [
    "jax",
    "ml-collections",
    "absl-py",
    "numpy",
    "gym",
    "d4rl",
    "mujoco_py",
    "dm-control",
    "gymnasium",
    "wandb",
    "tensorflow-cpu",
    "tensorflow-probability",
    "tensorflow-datasets",
    "dm-reverb",
    "rlds",
    "dm-haiku",
    "flax",
    "optax",
    "rlax",
    "chex",
    "dm_env_wrappers",
    "absl-py",
    "dm-env",
]
